# Latency-Aware-Execution-Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: tests.yml
configs/: default.yaml
notebooks/: 01_download_data.ipynb
reports/: backtest_BTCUSDT_klines_1m.csv  backtest_ETHUSDT_klines_1m.csv  backtest_SOLUSDT_klines_1m.csv  pipeline_results.csv  scaling_analysis.csv
scripts/: analysis.py  download_data.py  eval_ticks.py  generate_figures.py  run_backtest.py  run_pipeline.py  train_large.py  train_multi.py  train_qrdqn.py  validate_data.py
src/: __init__.py
src/data/: __init__.py  loader.py  schemas.py  validator.py
src/evaluation/: __init__.py  backtest.py  visualizations.py
src/features/: __init__.py  engine.py
src/policies/: __init__.py  adaptive.py  baselines.py  dqn_agent.py  rl_env.py
src/simulator/: __init__.py  engine.py  impact.py
src/utils/: __init__.py  config.py  errors.py
tests/: __init__.py
tests/test_data/: __init__.py  test_loader_and_validator.py
tests/test_evaluation/: __init__.py  test_backtest.py
tests/test_features/: __init__.py  test_engine.py
tests/test_policies/: __init__.py  test_all_policies.py
tests/test_simulator/: __init__.py  test_engine_and_impact.py
tests/test_utils/: __init__.py  test_errors_and_config.py
